Resolved problem with burger socials overflow

--- a/src/components/Footer/FooterNavMenu/FooterNavMenu.module.css
+++ b/src/components/Footer/FooterNavMenu/FooterNavMenu.module.css
@@ -61,6 +61,7 @@
     height: 200px;
     bottom: 0;
     background: rgba(0, 0, 0, 0);
+    overflow: hidden;
   }
 
   .footerNavMenu.burgered .footerLogo,
